--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 
-
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
 
 .container {
    margin: 50px auto;
@@ -68,7 +72,7 @@ background-color: aliceblue;
    max-width: 90vw;
    margin: 10px   auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
     padding: 10px;
 
@@ -84,7 +88,6 @@ nav{
 }
 nav ul{
     display: flex;
-    justify-content: space-around;
     list-style-type: none;
     text-decoration: none;
   
@@ -94,12 +97,12 @@ nav ul li a{
     color: rgb(42, 63, 253);
     font-size: 1.3rem;
     padding: 15px;
-    margin-right: 8px;
+    margin-right: 15px;
 }
 .logo{
    border: #1771d1;
     flex-wrap: wrap;
-    flex-basis: 100%;
+    flex-basis: 20%;
 
 }
 .qor h1{
@@ -149,21 +152,31 @@ nav ul li a:hover{
 }
 .og1{
     align-items: center;
-    background-color: hsl(213, 22%, 90%); ;
+    background-color: hsl(213, 22%, 90%); 
+    border-radius: 20px; 
+    padding: 30px;
 }
+
 .ciwan{
     background-color: #ffffff;
     color: #0004ff;
+    border-radius: 20px; 
+    
 }
 .og2{
     align-items: center;
-    background-color: hsl(213, 22%, 90%);  
+    background-color: hsl(213, 22%, 90%); 
+    border-radius: 20px; 
+    padding: 10px;
 }
 .og3{
     align-items: center;
-    background-color: hsl(213, 22%, 90%); ;
-
+    background-color: hsl(213, 22%, 90%); 
+    border-radius: 20px; 
+    padding: 10px;
 }
+
+
 h2{
     color: #6200ff;
 }
@@ -353,21 +366,58 @@ background-color: #4f9672;
     border: 2px solid blue;
     border-radius: 20px; 
     display: flex;
-    max-width: 90vw;
+    max-width: 100vw;
     margin: 10px      auto;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    
+
 }
 .magac{
     margin: 3px;
-    justify-content: center;
     font-size: 6rem; 
     flex-wrap: wrap;
+    display: flex;
+    flex: 20%;
     
     color: rgb(47, 0, 255)
     
 }
+.snav{
+    display: flex;
+    justify-content: center;
+    margin-right: 15px;
+    flex-wrap: wrap;
+    flex-basis: 80%;
+    padding: 15px;
+    border-radius: 5px;
+
+}
 .head nav{
     padding: 3px;
+}
+.headerka{
+    background-color: #c6c7ff;
+    border-radius: 20px;
+    height: fit-content;
+
+}
+.rndek{
+    padding: 10px;
+    margin: 10px;
+    color: #ffffff;
+    font-size: 1.5rem;
+}
+.nav{
+    margin-right: 20px;
+    padding-bottom: 10px;
+}
+.navyada{
+    margin-right: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    width: fit-content;
+
 }
 
 
